packages/svelte/tests/validator/samples/event-modifiers-redundant/input.svelte
<script>
	function handleTouchstart() {
		// ...
	}

	function handleClick() {
		// ...
	}
</script>

<button on:click|passive="{handleClick}"></button>
<div on:touchstart|passive="{handleTouchstart}"></div>