packages/svelte/tests/compiler-errors/samples/unbalanced-curly-element/main.svelte
<svelte:options runes />
<button
	onclick={() => console.log('hello')}}
>
	click
</button>
